@startuml er-diagram2
!define primary_key(x) <b><color:#b8861b><&key></color> x</b>
!define foreign_key(x) <color:#aaaaaa><&key></color> x
!define column(x) <color:#efefef><&media-record></color> x
!define table(x) entity x << (T, white) >>

' User Models
entity "User" as user {
  primary_key(id) : BigAutoField
  --
  column(username) : CharField
  column(email) : EmailField
  column(first_name) : CharField
  column(last_name) : CharField
  column(password) : CharField
  column(is_active) : BooleanField
  column(is_staff) : BooleanField
  column(is_superuser) : BooleanField
  column(date_joined) : DateTimeField
  column(last_login) : DateTimeField
}

entity "Student" as student {
  primary_key(id) : BigAutoField
  --
  foreign_key(user_id) : OneToOneField
  column(xp) : IntegerField
}

' Question Models
entity "Topic" as topic {
  primary_key(id) : BigAutoField
  --
  column(name) : CharField
}

entity "Question" as question {
  primary_key(id) : BigAutoField
  --
  foreign_key(topic_id) : ForeignKey
  column(text) : TextField
  column(choices) : JSONField
  column(correct_answer_index) : IntegerField
}

entity "PracticeSheet" as practice_sheet {
  primary_key(id) : BigAutoField
  --
  column(total_xp) : IntegerField
}

entity "Submission" as submission {
  primary_key(id) : BigAutoField
  --
  foreign_key(student_id) : ForeignKey
  foreign_key(sheet_id) : ForeignKey
  column(submitted_at) : DateTimeField
  column(time_taken) : DurationField
}

entity "Answer" as answer {
  primary_key(id) : BigAutoField
  --
  foreign_key(submission_id) : ForeignKey
  foreign_key(question_id) : ForeignKey
  column(confidence) : FloatField
}

entity "TopicMastery" as topic_mastery {
  primary_key(id) : BigAutoField
  --
  foreign_key(student_id) : ForeignKey
  foreign_key(topic_id) : ForeignKey
  column(difficulty) : FloatField
  column(stability) : FloatField
  column(last_review_date) : DateTimeField
}

' Relationships
user ||--|| student : "1:1"
topic ||--o{ question : "1:N"
student ||--o{ submission : "1:N"
practice_sheet ||--o{ submission : "1:N"
submission ||--o{ answer : "1:N"
question ||--o{ answer : "1:N"
student ||--o{ topic_mastery : "1:N"
topic ||--o{ topic_mastery : "1:N"
practice_sheet }o--o{ question : "M:N"

@enduml
